[project]
name = "20-agentic-blog-generation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.18",
    "langchain-groq>=1.1.2",
    "langgraph>=1.1.2",
    "langgraph-cli[inmem]>=0.4.16",
    "uvicorn>=0.41.0",
    "watchdog>=6.0.0",
]
